tests/baselines/reference/nodeModulesAllowJsTopLevelAwait(module=node12).errors.txt
tests/cases/conformance/node/allowJs/index.js(2,11): error TS1378: The 'module' setting 'Node12' does not support top-level 'await' expressions. Consider switching to 'NodeNext'.
tests/cases/conformance/node/allowJs/index.js(4,5): error TS1432: The 'module' setting 'Node12' does not support top-level 'for await' loops. Consider switching to 'NodeNext'.
tests/cases/conformance/node/allowJs/subfolder/index.js(2,11): error TS1378: The 'module' setting 'Node12' does not support top-level 'await' expressions. Consider switching to 'NodeNext'.
tests/cases/conformance/node/allowJs/subfolder/index.js(4,5): error TS1432: The 'module' setting 'Node12' does not support top-level 'for await' loops. Consider switching to 'NodeNext'.


==== tests/cases/conformance/node/allowJs/subfolder/index.js (2 errors) ====
    // cjs format file
    const x = await 1;
              ~~~~~
!!! error TS1378: The 'module' setting 'Node12' does not support top-level 'await' expressions. Consider switching to 'NodeNext'.
    export {x};
    for await (const y of []) {}
        ~~~~~
!!! error TS1432: The 'module' setting 'Node12' does not support top-level 'for await' loops. Consider switching to 'NodeNext'.
==== tests/cases/conformance/node/allowJs/index.js (2 errors) ====
    // esm format file
    const x = await 1;
              ~~~~~
!!! error TS1378: The 'module' setting 'Node12' does not support top-level 'await' expressions. Consider switching to 'NodeNext'.
    export {x};
    for await (const y of []) {}
        ~~~~~
!!! error TS1432: The 'module' setting 'Node12' does not support top-level 'for await' loops. Consider switching to 'NodeNext'.
==== tests/cases/conformance/node/allowJs/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== tests/cases/conformance/node/allowJs/subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }